fix: make header position relative
To allow the banner to appear - otherwise it just gets hidden by the header

--- a/src/styles/isomer-cms/elements/header.scss
+++ b/src/styles/isomer-cms/elements/header.scss
@@ -1,7 +1,7 @@
 @import "./variable";
 
 .header {
-  position: fixed;
+  position: relative;
   height: $header-height;
   background: $header-background;
   width: 100%;
